--- a/AngularBootstrap/src/app/app.component.html
+++ b/AngularBootstrap/src/app/app.component.html
@@ -2,6 +2,10 @@
 <br>
 <button type="button" (click)="add()">Agregar</button>
 
+<div class="progress">
+  <div *ngIf="isLoading" class="progress-bar progress-bar-animated" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+
 <button type="button" (click)="remove()">Remover</button>
 
 <table class="table table-striped">
