Angular bootstrap (tabla y barra)

--- a/AngularBootstrap/src/app/app.component.css
+++ b/AngularBootstrap/src/app/app.component.css
@@ -2,3 +2,13 @@
     display: flex;
     justify-content: center;
 }
+
+.start{
+    width: 0%;
+}
+.finish{
+    width: 100%;
+}
+.anim{
+    transition: all 3s ease .5s;
+}
