--- a/AngularBootstrap/src/app/app.component.html
+++ b/AngularBootstrap/src/app/app.component.html
@@ -1,12 +1,14 @@
-<h1 class="center">Tabla con {{title}}</h1>
-<br>
-<button id="btnAdd" class="btn btn-success" type="button" (click)="add()">Agregar</button>
-
 <div class="progress">
   <div id="barra" class="progress-bar progress-bar-animated start anim" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
 </div>
 
-<button type="button" (click)="remove()">Remover</button>
+<h1 class="center">Tabla con {{title}}</h1>
+<br>
+
+<div class="center">
+  <button id="btnAdd" class="btn btn-success" type="button" (click)="add()">Agregar</button> | 
+  <button type="button" class="btn btn-danger" (click)="remove()">Remover</button>
+</div>
 
 <table class="table table-striped">
   <thead>
