--- a/AngularMaterial/src/app/app.component.html
+++ b/AngularMaterial/src/app/app.component.html
@@ -7,11 +7,11 @@
   </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item>
-      <mat-icon>dialpad</mat-icon>
+      <mat-icon>login</mat-icon>
       <span>Login</span>
     </button>
     <button mat-menu-item>
-      <mat-icon>voicemail</mat-icon>
+      <mat-icon>account_circle</mat-icon>
       <span>Registro</span>
     </button>
     <button mat-menu-item>
@@ -29,51 +29,51 @@
   </button>
 </mat-toolbar>
 
-<br>
-
 <div>
   <mat-drawer-container autosize>
+    <mat-drawer #drawer class="example-sidenav" mode="side">
+      <p>Auto-resizing sidenav</p>
+      <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
+      <button (click)="showFiller = !showFiller" mat-raised-button>
+        Toggle extra text
+      </button>
+    </mat-drawer>
+
+    <br>
+
+    <div class="center">
+      <h1>
+        Tabla en Angular Material
+      </h1>
+    </div>
+
+    <div>
+      <button mat-raised-button (click)="addColumn()"> Agregar columna </button>
+      <mat-progress-bar *ngIf="isLoading" color="primary" mode="indeterminate"></mat-progress-bar>
+      
+      <button mat-raised-button (click)="removeColumn()"> Remover columna </button>
+      
+      <button mat-raised-button (click)="drawer.toggle()"> Abrir panel </button>
+    </div>
+
+    <table mat-table [dataSource]="data" class="mat-elevation-z8">
+      <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+        <th id="head" mat-header-cell *matHeaderCellDef> {{column}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+      <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+      
+    </table>
+
+    <mat-progress-bar [value]="progresValue" *ngIf="progresValue > 0"></mat-progress-bar>
+      <div>
+        <p *ngFor="let i of rangeArray">
+        </p>
+      </div>
   </mat-drawer-container>
 </div>
 
-<mat-drawer #drawer class="example-sidenav" mode="side">
-  <p>Auto-resizing sidenav</p>
-  <p *ngIf="showFiller">Lorem, ipsum dolor sit amet consectetur.</p>
-  <button (click)="showFiller = !showFiller" mat-raised-button>
-    Toggle extra text
-  </button>
-</mat-drawer>
 
-<br>
 
-<div class="center">
-  <h1>
-    Tabla en Angular Material
-  </h1>
-</div>
-
-<div>
-  <button mat-raised-button (click)="addColumn()"> Add column </button>
-  <mat-progress-bar *ngIf="isLoading" color="primary" mode="indeterminate"></mat-progress-bar>
-  
-  <button mat-raised-button (click)="removeColumn()"> Remove column </button>
-  
-  <button mat-raised-button (click)="drawer.toggle()">Toggle sidenav</button>
-</div>
-
-<table mat-table [dataSource]="data" class="mat-elevation-z8">
-  <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-    <th id="head" mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-  <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
-  
-</table>
-
-<mat-progress-bar [value]="progresValue" *ngIf="progresValue > 0"></mat-progress-bar>
-  <div>
-    <p *ngFor="let i of rangeArray">
-    </p>
-  </div>
