--- a/AngularMaterial/src/app/app.component.html
+++ b/AngularMaterial/src/app/app.component.html
@@ -6,17 +6,17 @@
     <mat-icon>more_vert</mat-icon>
   </button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item routeLink="/login">
+    <button mat-menu-item routerLink="/login">
       <mat-icon>login</mat-icon>
       <span>Login</span>
     </button>
-    <button mat-menu-item>
+    <button mat-menu-item routerLink="/registro">
       <mat-icon>account_circle</mat-icon>
       <span>Registro</span>
     </button>
-    <button mat-menu-item>
-      <mat-icon>notifications_off</mat-icon>
-      <span>Disable alerts</span>
+    <button mat-menu-item routerLink="/">
+      <mat-icon>home</mat-icon>
+      <span>Página principal</span>
     </button>
   </mat-menu>
   <span>Tabla y barra de carga con Angular</span>
@@ -50,7 +50,13 @@
     <div>
       <router-outlet></router-outlet>
     </div>
+    <br>
+    <div>
+      http://143.244.150.210/movitapp-back/departamentos/ciudad/listarPorDepartamnto/25
 
+      http://143.244.150.210/movitapp-backp/departamentos/listar
+    </div>
+    <br>
     <div>
       <button mat-raised-button (click)="addColumn()"> Agregar columna </button>
       <mat-progress-bar *ngIf="isLoading" color="primary" mode="indeterminate"></mat-progress-bar>
