--- a/AngularMaterial/src/app/pages/login/login.component.html
+++ b/AngularMaterial/src/app/pages/login/login.component.html
@@ -1,1 +1,17 @@
-<p>login works!</p>
+<h2 class="center">Ver información por departamento</h2>
+<div *ngIf="loadService.isLoading | async" class="loader-container">
+    <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
+</div>
+<br>
+
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+    <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+        <th id="head" mat-header-cell *matHeaderCellDef> {{column}} </th>
+        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+    <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+</table>
