--- a/AngularMaterial/src/app/app.component.html
+++ b/AngularMaterial/src/app/app.component.html
@@ -84,12 +84,12 @@
       
     </table>
 
-    <mat-progress-bar [value]="progresValue" *ngIf="progresValue > 0"></mat-progress-bar>
+    <!-- <mat-progress-bar [value]="progresValue" *ngIf="progresValue > 0"></mat-progress-bar>
       <div>
         <p *ngFor="let i of rangeArray">
         </p>
-      </div>
-  </mat-drawer-container>
+      </div> -->
+    </mat-drawer-container>
 </div>
 
 
