--- a/AngularMaterial/src/app/pages/buscar/buscar.component.html
+++ b/AngularMaterial/src/app/pages/buscar/buscar.component.html
@@ -3,29 +3,42 @@
     <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
 </div>
 
-<div class="move-button-right">
-    <button mat-raised-button (click)="esconderTabla()"> {{buttonName}} </button>
-</div>
 
+<div style="text-align: right;">
+    
+</div>
+<div class="row">
+    <div class="column">
+
+    </div>
+    <div class="column">
+        <div style="text-align: center;">
+            <button mat-raised-button (click)="esconderTabla()"> {{buttonName}} </button>
+        </div>
+    </div>
+</div>
 <div class="row">
     <div class="column">
         <h3 style="text-align: center;">Departamentos</h3>
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-            <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-                <th id="head" mat-header-cell *matHeaderCellDef> {{column}} </th>
-                <ng-container *ngIf="column != 'ciudades'; else optionsTemplate">
-                    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+        <ng-container>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+                    <th id="head" mat-header-cell *matHeaderCellDef> {{column}} </th>
+                    <ng-container *ngIf="column != 'ciudades'; else optionsTemplate">
+                        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+                    </ng-container>
+                    
+                    <ng-template #optionsTemplate>
+                        <td mat-cell *matCellDef="let element" class="action-link">
+                            <button mat-raised-button (click)="cargarCiudad(element.idDepartamento)">Ciudades</button>
+                        </td>
+                    </ng-template>
                 </ng-container>
-                
-                <ng-template #optionsTemplate>
-                    <td mat-cell *matCellDef="let element" class="action-link">
-                        <button mat-raised-button (click)="cargarCiudad(element.idDepartamento)">Ciudades</button>
-                    </td>
-                </ng-template>
-            </ng-container>
-            <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-            <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
-        </table>
+                <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+                <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+            </table>
+            
+        </ng-container>
     </div>
 
     <div class="column">
