--- a/AngularMaterial/src/app/pages/buscar/buscar.component.html
+++ b/AngularMaterial/src/app/pages/buscar/buscar.component.html
@@ -37,7 +37,7 @@
                 <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
                 <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
             </table>
-            
+            <mat-paginator #categoryPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </ng-container>
     </div>
 
@@ -53,7 +53,7 @@
                 <tr mat-header-row *matHeaderRowDef="columnsToDisplayC"></tr>
                 <tr mat-row *matRowDef="let row; columns: columnsToDisplayC;"></tr>
             </table>
-            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            <mat-paginator #citiesPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
         </ng-container>
     </div>
 </div>
