--- a/AngularMaterial/src/app/pages/buscar/buscar.component.html
+++ b/AngularMaterial/src/app/pages/buscar/buscar.component.html
@@ -12,9 +12,24 @@
 
     </div>
     <div class="column">
-        <div style="text-align: center;">
-            <button mat-raised-button (click)="esconderTabla()"> {{buttonName}} </button>
-        </div>
+        <ng-container *ngIf="show === true; else hide">
+            <div style="text-align: center;">
+                <button mat-icon-button (click)="esconderTabla()"> 
+                    <mat-icon>
+                        visibility_off
+                    </mat-icon>
+                </button>
+            </div>
+        </ng-container>
+        <ng-template #hide>
+            <div style="text-align: center;">
+                <button mat-icon-button (click)="esconderTabla()"> 
+                    <mat-icon>
+                        visibility
+                    </mat-icon>
+                </button>
+            </div>
+        </ng-template>
     </div>
 </div>
 <div class="row">
@@ -30,7 +45,9 @@
                     
                     <ng-template #optionsTemplate>
                         <td mat-cell *matCellDef="let element" class="action-link">
-                            <button mat-raised-button (click)="cargarCiudad(element.idDepartamento)">Ciudades</button>
+                            <button mat-icon-button (click)="cargarCiudad(element.idDepartamento)">
+                                <mat-icon>menu_open</mat-icon>
+                            </button>
                         </td>
                     </ng-template>
                 </ng-container>
