--- a/AngularMaterial/src/app/pages/departamento/departamento.component.html
+++ b/AngularMaterial/src/app/pages/departamento/departamento.component.html
@@ -2,7 +2,7 @@
 
 <br>
 
-<button mat-raised-button routerLink="/ciudad">Click</button>
+<button mat-raised-button routerLink="/departamento/ciudad">Click</button>
 
 <div>
     <router-outlet></router-outlet>
