--- a/AngularMaterial/src/app/pages/departamento/departamento.component.html
+++ b/AngularMaterial/src/app/pages/departamento/departamento.component.html
@@ -1,9 +1,13 @@
-<p>departamento works!</p>
+<p class="center">departamento works!</p>
 
 <br>
 
-<button mat-raised-button routerLink="/departamento/ciudad">Click</button>
+<div class="center">
+    <button mat-raised-button routerLink="/departamento/ciudad">Click</button>
+</div>
 
-<div>
+<br>
+
+<div class="center">
     <router-outlet></router-outlet>
 </div>
