--- a/AngularMaterial/src/app/pages/departamento/departamento.component.html
+++ b/AngularMaterial/src/app/pages/departamento/departamento.component.html
@@ -1,9 +1,35 @@
 <p class="center">departamento works!</p>
+<div *ngIf="loadService.isLoading | async" class="loader-container">
+    <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
+</div>
 
 <br>
 
-<div class="center">
-    <button mat-raised-button routerLink="/departamento/ciudad">Click</button>
+<div class="row">
+    <div class="column" [hidden]="route.children.length !== 0">
+        <h3 style="text-align: center;">Departamentos</h3>
+        <ng-container>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+                <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+                    <th id="head" mat-header-cell *matHeaderCellDef> {{column}} </th>
+                    <ng-container *ngIf="column != 'ciudades'; else optionsTemplate">
+                        <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
+                    </ng-container>
+                    
+                    <ng-template #optionsTemplate>
+                        <td mat-cell *matCellDef="let element" class="action-link">
+                            <button mat-icon-button [routerLink]="['ciudad/',element.idDepartamento]">
+                                <mat-icon>menu_open</mat-icon>
+                            </button>
+                        </td>
+                    </ng-template>
+                </ng-container>
+                <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+                <tr mat-row *matRowDef="let row; columns: columnsToDisplay;"></tr>
+            </table>
+            <mat-paginator #categoryPaginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+        </ng-container>
+    </div>
 </div>
 
 <br>
