--- a/AngularMaterial/src/app/pages/vehiculo/vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/vehiculo.component.html
@@ -1,1 +1,32 @@
-<p>vehiculo works!</p>
+<div class="row" >
+    <div class="column">
+
+    </div>
+    <div class="column" [hidden]="route.children.length !== 0">
+        <h2 class="center">Ver lista de vehículos</h2>
+        <div style="text-align: right;">
+            <button mat-icon-button routerLink="/vehiculo/registrar-vehiculo"> 
+                <mat-icon>emoji_transportation</mat-icon>
+                <span>Registrar vehiculo</span>
+            </button>
+        </div>
+        <div class="center">
+            Tabla
+        </div>
+    </div>
+    <div class="column">
+        
+    </div>
+</div>
+
+<div class="row">
+    <div class="column">
+
+    </div>
+    <div class="column">
+        <router-outlet></router-outlet>
+    </div>
+    <div class="column">
+
+    </div>
+</div>
