--- a/AngularMaterial/src/app/pages/vehiculo/vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/vehiculo.component.html
@@ -1,35 +1,74 @@
+<div *ngIf="loadService.isLoading | async" class="loader-container">
+    <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
+</div>
+
 <div class="row" >
     <div class="column">
 
     </div>
     <div class="column" [hidden]="route.children.length !== 0">
         <h2 class="center">Ver lista de vehículos</h2>
-        <div class="row">
-            <div class="column">
-                <div style="text-align: left;">
-                    <button mat-icon-button routerLink="/vehiculo/editar-vehiculo"> 
-                        <mat-icon>car_rental</mat-icon>
-                        <span>Editar vehiculo</span>
-                    </button>
-                </div>
-            </div>
-            <div class="column">
-                <div style="text-align: left;">
-                    <button mat-icon-button routerLink="/vehiculo/registrar-vehiculo"> 
-                        <mat-icon>emoji_transportation</mat-icon>
-                        <span>Registrar vehiculo</span>
-                    </button>
-                </div>
-            </div>
-        </div>
-        
-        <div class="center">
-            
+    </div>
+    <div class="column" [hidden]="route.children.length !== 0">
+        <div style="text-align: center;">
+            <button mat-icon-button routerLink="/vehiculo/registrar-vehiculo"> 
+                <mat-icon>emoji_transportation</mat-icon>
+                <span>Registrar vehiculo</span>
+            </button>
         </div>
     </div>
-    <div class="column">
-        
-    </div>
+</div>
+
+<div [hidden]="route.children.length !== 0">
+    
+    <table mat-table class="mat-elevation-z8" [dataSource]="dataSource.content" [hidden]="route.children.length !== 0">
+        <ng-container matColumnDef="idVehiculo">
+            <th id="idVehiculo" mat-header-cell *matHeaderCellDef>Id</th>
+            <td mat-cell *matCellDef="let element">{{element.idVehiculo}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="placa">
+            <th id="placa" mat-header-cell *matHeaderCellDef>Placa</th>
+            <td mat-cell *matCellDef="let element">{{element.placa}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="modelo">
+            <th id="modelo" mat-header-cell *matHeaderCellDef>Modelo</th>
+            <td mat-cell *matCellDef="let element">{{element.modelo}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="marca">
+            <th id="marca" mat-header-cell *matHeaderCellDef>Marca</th>
+            <td mat-cell *matCellDef="let element">{{element.marca}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="tipoVehiuclo">
+            <th id="tipoVehiuclo" mat-header-cell *matHeaderCellDef>Tipo de Vehículo</th>
+            <td mat-cell *matCellDef="let element">{{element.tipoVehiuclo}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="capacidad">
+            <th id="capacidad" mat-header-cell *matHeaderCellDef>Capacidad</th>
+            <td mat-cell *matCellDef="let element">{{element.capacidad}}</td>
+        </ng-container>
+
+        <ng-container matColumnDef="accion">
+            <th id="accion" mat-header-cell *matHeaderCellDef>Acción</th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button [routerLink]="['/vehiculo/editar-vehiculo',element.idVehiculo]">
+                    <mat-icon>car_rental</mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [length]="dataSource.totalElements"
+                    [pageSize]="dataSource.pageable.pageSize"
+                    [pageSizeOptions]="[3, 5, 10, 25]"
+                    (page)="pageEvent = $event; onPaginateChange($event)">
+    </mat-paginator>
 </div>
 
 <div class="row">
