--- a/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
@@ -19,63 +19,68 @@
 
 <div class="center">
     <form [formGroup]="form" (ngSubmit)="editarVehiculo($event)">
-        <p>
-            Id: <br/>
-            <input type="number" placeholder="Ej:1" formControlName="idVehiculo">
-        </p>
-        <div *ngIf="form.get('idVehiculo').errors && form.get('idVehiculo').touched">
-            <p *ngIf="form.get('idVehiculo').hasError('required')">
-                Es un campo requerido
-            </p>
-        </div>
-        <p>
-            Placa: <br/>
-            <input type="text" placeholder="Ej:abc-123" formControlName="placa">
-        </p>
+        <mat-form-field appearance="fill">
+            <mat-label>Placa</mat-label>
+            <input matInput type="text" placeholder="Ej:abc-123" formControlName="placa"> {{veh.placa}}
+        </mat-form-field>
         <div *ngIf="form.get('placa').errors && form.get('placa').touched">
             <p *ngIf="form.get('placa').hasError('maxlength') || form.get('placa').hasError('minlength')">
                 Placa inválida. Ej: abc-123
             </p>
-            <p *ngIf="form.get('placa').hasError('required')">
+            <!-- <p *ngIf="form.get('placa').hasError('required')">
                 Es un campo requerido
-            </p>
+            </p> -->
         </div>
-        <p>
-            Marca: <br/>
-            <input type="text" placeholder="Ej:Ford" formControlName="marca">
-        </p>
-        <div *ngIf="form.get('marca').errors && form.get('marca').touched">
+
+        <mat-form-field appearance="fill">
+            <mat-label>Marca</mat-label>
+            <input matInput type="text" placeholder="Ej:Ford" formControlName="marca">{{veh.marca}}
+        </mat-form-field>
+        <!-- <div *ngIf="form.get('marca').errors && form.get('marca').touched">
             <p *ngIf="form.get('marca').hasError('required')">
                 Es un campo requerido
             </p>
-        </div>
-        <p>
-            Modelo: <br/>
-            <input type="text" placeholder="Ej:2008" formControlName="modelo">
-        </p>
+        </div> -->
+
+        <mat-form-field appearance="fill">
+            <mat-label>Modelo</mat-label>
+            <input matInput type="text" placeholder="Ej:2008" formControlName="modelo">{{veh.modelo}}
+        </mat-form-field>
         <div *ngIf="form.get('modelo').errors && form.get('modelo').touched">
-            <p *ngIf="form.get('modelo').hasError('required')">
+            <!-- <p *ngIf="form.get('modelo').hasError('required')">
                 Es un campo requerido
+            </p> -->
+            <p *ngIf="form.get('modelo').hasError('min') || form.get('modelo').hasError('max')">
+                Modelos entre 1970 y 2022
             </p>
         </div>
-        <p>
-            Tipo de vehículo: <br/>
-            <input type="text" placeholder="Ej:Camioneta" formControlName="tipoVehiculo">
-        </p>
-        <div *ngIf="form.get('tipoVehiculo').errors && form.get('tipoVehiculo').touched">
+
+        <mat-form-field appearance="fill">
+            <mat-label>Tipo de vehículo</mat-label>
+            <mat-select [(value)]="selectedValue" formControlName="tipoVehiculo">
+                <mat-option value="camion">Camión</mat-option>
+                <mat-option value="frios">Fríos</mat-option>
+                <mat-option value="tanque">Tanque</mat-option>
+                <mat-option value="furgon">Furgón</mat-option>
+                <mat-option value="estacas">Estacas</mat-option>
+            </mat-select>
+            {{veh.tipoVehiuclo}}
+        </mat-form-field>
+        <!-- <div *ngIf="form.get('tipoVehiculo').errors && form.get('tipoVehiculo').touched">
             <p *ngIf="form.get('tipoVehiculo').hasError('required')">
                 Es un campo requerido
             </p>
-        </div>
-        <p>
-            Capacidad: <br/>
-            <input type="text" placeholder="Ej:150Kg" formControlName="capacidad">
-        </p>
-        <div *ngIf="form.get('capacidad').errors && form.get('capacidad').touched">
+        </div> -->
+
+        <mat-form-field appearance="fill">
+            <mat-label>Capacidad</mat-label>
+            <input matInput type="text" placeholder="Ej:150Kg" formControlName="capacidad">{{veh.capacidad}}
+        </mat-form-field>
+        <!-- <div *ngIf="form.get('capacidad').errors && form.get('capacidad').touched">
             <p *ngIf="form.get('capacidad').hasError('required')">
                 Es un campo requerido
             </p>
-        </div>
+        </div> -->
 
         <!-- [disabled]="form.invalid" -->
 
