--- a/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="loadService.isLoading | async" class="loader-container">
+<!-- <div *ngIf="loadService.isLoading | async" class="loader-container">
     <mat-progress-bar color="primary" mode="indeterminate"></mat-progress-bar>
-</div>
+</div> -->
 <h2 class="center">Editar vehículo</h2>
 
 <div class="center">
