--- a/AngularMaterial/src/app/app.component.html
+++ b/AngularMaterial/src/app/app.component.html
@@ -1,6 +1,10 @@
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
 
+<div [hidden]="flagProgressBar">
+  <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+</div>
+
 <mat-toolbar>
   <span class="material-icons-outlined">
     <button mat-icon-button (click)="drawer.toggle()">
