--- a/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/editar-vehiculo/editar-vehiculo.component.html
@@ -57,7 +57,7 @@
 
         <mat-form-field appearance="fill">
             <mat-label>Modelo</mat-label>
-            <input matInput [ngModel]="veh.modelo" type="text" placeholder="Ej:2008" formControlName="modelo">
+            <input matInput [ngModel]="veh.modelo" type="number" placeholder="Ej:2008" formControlName="modelo">
         </mat-form-field>
         <div *ngIf="form.get('modelo').errors && form.get('modelo').touched">
             <p *ngIf="form.get('modelo').hasError('required')">
