--- a/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
@@ -42,7 +42,7 @@
 
         <mat-form-field appearance="fill">
             <mat-label>Modelo</mat-label>
-            <input matInput type="text" placeholder="Ej:2008" formControlName="modelo">
+            <input matInput type="number" placeholder="Ej:2008" formControlName="modelo">
         </mat-form-field>
         <div *ngIf="form.get('modelo').errors && form.get('modelo').touched">
             <p *ngIf="form.get('modelo').hasError('required')">
