--- a/AngularMaterial/src/app/app.component.html
+++ b/AngularMaterial/src/app/app.component.html
@@ -12,7 +12,7 @@
     </button>
   </span>
 
-  <span>Angular-Material</span>
+  <span>Movit-app</span>
   
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
