--- a/AngularMaterial/src/app/pages/unauthorized/unauthorized.component.html
+++ b/AngularMaterial/src/app/pages/unauthorized/unauthorized.component.html
@@ -1,1 +1,21 @@
-<p>unauthorized works!</p>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="*" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <title>401 - UNAUTHORIZED</title>
+</head>
+
+<body>
+    <div class="cover">
+        <h1>¡ALTO AHÍ! No está autorizado para estar en este sitio
+        <small>Error 401</small>
+        </h1>   
+        <img src="assets/gun_cat.jpg" alt="gatito con arma" width="500"> 
+    </div>
+</body>
+
+</html>
