--- a/AngularMaterial/src/app/pages/login/login.component.html
+++ b/AngularMaterial/src/app/pages/login/login.component.html
@@ -4,6 +4,39 @@
 </div>
 
 <div class="center">
-    <img src="assets/dream_os.jpg" alt="imagen chévere">
+    <img src="assets/pngelogin_skyblue.png" alt="login" width="200"> 
+</div>
+
+<br>
+
+<div>
+    <form [formGroup]="form" (ngSubmit)="login($event)"> 
+        <mat-form-field class="center">
+            <mat-label>Nombre de usuario</mat-label>
+            <input matInput type="text" placeholder="Ej: Admin" formControlName="username">
+        </mat-form-field>
+        <div class="center" *ngIf="form.get('username').errors && form.get('username').touched">
+            <p *ngIf="form.get('username').hasError('required')">
+                Es un campo requerido
+            </p>
+        </div>
+
+        <mat-form-field class="center">
+            <mat-label>Contraseña</mat-label>
+            <input matInput type="password" formControlName="password">
+        </mat-form-field>
+        <div class="center" *ngIf="form.get('password').errors && form.get('password').touched">
+            <p *ngIf="form.get('password').hasError('required')">
+                Es un campo requerido
+            </p>
+        </div>
+
+        <div class="center">
+            <button mat-icon-button type="submit">
+                <span>Iniciar sesión</span>
+                <mat-icon>login</mat-icon>
+            </button>
+        </div>
+    </form>
 </div>
 
