--- a/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
+++ b/AngularMaterial/src/app/pages/vehiculo/registrar-vehiculo/registrar-vehiculo.component.html
@@ -27,7 +27,7 @@
                 <mat-option value="Renault">Renault</mat-option>
                 <mat-option value="Mazda">Mazda</mat-option>
                 <mat-option value="BMW">BMW</mat-option>
-                <mat-option value="Alfa_Romeo">Alfa Romeo</mat-option>
+                <mat-option value="Alfa Romeo">Alfa Romeo</mat-option>
                 <mat-option value="Audi">Audi</mat-option>
                 <mat-option value="Ferrari">Ferrari</mat-option>
                 <mat-option value="Peugeot">Peugeot</mat-option>
